EncryptorImpl Changes